# seattle2025-exercises

./: Readme.md
exercise1/: lr_template.py
exercise2/: lr-conservative_template.py
exercise3/: CMakeLists.txt  Readme.md  main_template.cpp
